# go-library-sample

./: .gitignore  CMakeLists.txt
go-library/: go.mod  go.sum  main.go  utils.go
src/: main.cpp
